--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,8 @@
     "prettier",
     "prettier/@typescript-eslint"
   ],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
