--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ coverage
 
 # Transpiled files
 build/
+dist/
 
 # VS Code
 .vscode
@@ -27,3 +28,6 @@ build/
 
 # Misc
 .DS_Store
+
+# Configs
+.env
