--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "dotenv": "^8.2.0",
     "inversify": "^5.0.1",
     "lodash": "^4.17.15",
+    "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "socks-proxy-agent": "^5.0.0",
     "telegraf": "^3.36.0",
     "tslib": "~1.10.0",
+    "typeorm": "^0.2.24",
+    "typeorm-transactional-cls-hooked": "^0.1.12",
     "winston": "^3.2.1"
   }
 }
