--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cls-hooked": "^4.2.2",
+    "delay": "^4.3.0",
     "dotenv": "^8.2.0",
     "inversify": "^5.0.1",
     "lodash": "^4.17.15",
