--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "node-typescript-boilerplate",
+  "name": "tg-anon-chat",
   "version": "0.0.0",
-  "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
+  "description": "Telegram anonymous chat",
   "engines": {
     "node": ">= 12.13 <13"
   },
+  "private": true,
   "devDependencies": {
     "@types/jest": "~25.1.2",
     "@types/lodash": "^4.14.149",
@@ -29,8 +30,7 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
-  "author": "Jakub Synowiec <github@jakubsynowiec.info>",
-  "license": "Apache-2.0",
+  "author": "Edgar Poghosyan <starguitar307@gmail.com>",
   "dependencies": {
     "cls-hooked": "^4.2.2",
     "delay": "^4.3.0",
