--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "delay": "^4.3.0",
     "dotenv": "^8.2.0",
     "inversify": "^5.0.1",
+    "inversify-inject-decorators": "^3.1.0",
     "lodash": "^4.17.15",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
