Fix build out folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "esModuleInterop": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*", "__tests__/**/*"]
+  "include": ["src/**/*"]
 }
