Add redis session storage

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
+
+# memory or redis
+SESSION_STORAGE=memory
+
+# Redis url. Required if SESSION_STORAGE=redis
+REDIS_URL=
