--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,29 @@
 BOT_TOKEN=
+
+# Use web hooks or not.
+# true/false
+# Optional. Default: false
+WEB_HOOKS=false
+
+# Use only if you are using WebHooks.
+# The port on which webhook server will listen
+# Note: telegram sends webhooks only to these ports: 443, 80, 88, 8443
+# See: https://core.telegram.org/bots/api#setwebhook
+PORT=443
+
+# Use only if you are using WebHooks.
+# This is the url that server will use for WebHooks.
+# You should config it in your bots settings
+# and then set it here. Should be secret,
+# for example, can contain your BOT_TOKEN.
+# Example: https://server.tld:8443/secret-path
+WEB_HOOKS_SECRET_URL=
+
+# Use only if you are using WebHooks.
+# The path from your WEB_HOOKS_SECRET_URL
+# Example: /secret-path
+WEB_HOOKS_PATH=
+
 SOCKS_PROXY=socks://127.0.0.1:9050
 
 DB_HOST=
